// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Confirmation Preview should correctly strip and render piped answers 1`] = `
<EditorLayout
  page={
    Object {
      "displayName": "Hello world",
      "id": "1",
      "negative": Object {
        "description": "negative description",
        "id": "2",
        "label": "negative label",
        "validationErrorInfo": Array [],
      },
      "page": Object {
        "answers": Array [
          Object {
            "id": "1",
            "mutuallyExclusiveOption": Object {
              "id": "3",
              "label": "label 3",
            },
            "options": Array [
              Object {
                "id": "1",
                "label": "label 1",
              },
              Object {
                "id": "2",
                "label": "label 2",
              },
            ],
            "type": "Radio",
          },
        ],
        "displayName": "page name",
        "id": "1",
      },
      "positive": Object {
        "description": "positive description",
        "id": "1",
        "label": "positive label",
        "validationErrorInfo": Array [],
      },
      "title": "<p>foo<span data-piped=\\"x\\" data-id=\\"1\\">[bar]</span></p>",
    }
  }
  preview={true}
  renderPanel={[Function]}
  title="Hello world"
>
  <Panel>
    <Preview__Container>
      <PageTitle
        title="<p>foo<span data-piped=\\"x\\" data-id=\\"1\\">bar</span></p>"
      />
      <Preview__Replay
        key="1"
      >
        <MultipleChoiceAnswerOptionsReplay
          options={
            Array [
              Object {
                "id": "1",
                "label": "label 1",
              },
              Object {
                "id": "2",
                "label": "label 2",
              },
              Object {
                "id": "3",
                "label": "label 3",
              },
            ]
          }
        />
      </Preview__Replay>
      <MultipleChoiceAnswer
        answer={
          Object {
            "options": Array [
              Object {
                "description": "positive description",
                "id": "1",
                "label": "positive label",
                "validationErrorInfo": Array [],
              },
              Object {
                "description": "negative description",
                "id": "2",
                "label": "negative label",
                "validationErrorInfo": Array [],
              },
            ],
            "type": "Radio",
          }
        }
      />
    </Preview__Container>
  </Panel>
</EditorLayout>
`;

exports[`Question Confirmation Preview should not render replay options when there are no answer options 1`] = `
<EditorLayout
  page={
    Object {
      "displayName": "Hello world",
      "id": "1",
      "negative": Object {
        "description": "negative description",
        "id": "2",
        "label": "negative label",
        "validationErrorInfo": Array [],
      },
      "page": Object {
        "answers": Array [],
        "displayName": "foobar",
        "id": "1",
      },
      "positive": Object {
        "description": "positive description",
        "id": "1",
        "label": "positive label",
        "validationErrorInfo": Array [],
      },
      "title": "<p>Hello world</p>",
    }
  }
  preview={true}
  renderPanel={[Function]}
  title="Hello world"
>
  <Panel>
    <Preview__Container>
      <PageTitle
        title="<p>Hello world</p>"
      />
      <MultipleChoiceAnswer
        answer={
          Object {
            "options": Array [
              Object {
                "description": "positive description",
                "id": "1",
                "label": "positive label",
                "validationErrorInfo": Array [],
              },
              Object {
                "description": "negative description",
                "id": "2",
                "label": "negative label",
                "validationErrorInfo": Array [],
              },
            ],
            "type": "Radio",
          }
        }
      />
    </Preview__Container>
  </Panel>
</EditorLayout>
`;

exports[`Question Confirmation Preview should render 1`] = `
<EditorLayout
  page={
    Object {
      "displayName": "Hello world",
      "id": "1",
      "negative": Object {
        "description": "negative description",
        "id": "2",
        "label": "negative label",
        "validationErrorInfo": Array [],
      },
      "page": Object {
        "answers": Array [
          Object {
            "id": "1",
            "mutuallyExclusiveOption": Object {
              "id": "3",
              "label": "label 3",
            },
            "options": Array [
              Object {
                "id": "1",
                "label": "label 1",
              },
              Object {
                "id": "2",
                "label": "label 2",
              },
            ],
            "type": "Radio",
          },
        ],
        "displayName": "page name",
        "id": "1",
      },
      "positive": Object {
        "description": "positive description",
        "id": "1",
        "label": "positive label",
        "validationErrorInfo": Array [],
      },
      "title": "<p>Hello world</p>",
    }
  }
  preview={true}
  renderPanel={[Function]}
  title="Hello world"
>
  <Panel>
    <Preview__Container>
      <PageTitle
        title="<p>Hello world</p>"
      />
      <Preview__Replay
        key="1"
      >
        <MultipleChoiceAnswerOptionsReplay
          options={
            Array [
              Object {
                "id": "1",
                "label": "label 1",
              },
              Object {
                "id": "2",
                "label": "label 2",
              },
              Object {
                "id": "3",
                "label": "label 3",
              },
            ]
          }
        />
      </Preview__Replay>
      <MultipleChoiceAnswer
        answer={
          Object {
            "options": Array [
              Object {
                "description": "positive description",
                "id": "1",
                "label": "positive label",
                "validationErrorInfo": Array [],
              },
              Object {
                "description": "negative description",
                "id": "2",
                "label": "negative label",
                "validationErrorInfo": Array [],
              },
            ],
            "type": "Radio",
          }
        }
      />
    </Preview__Container>
  </Panel>
</EditorLayout>
`;

exports[`Question Confirmation Preview should render a loading message when loading 1`] = `
<Loading
  height="38rem"
>
  Preview loading…
</Loading>
`;
